--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <p><strong>CONNECT</strong><br>
             <a href="https://github.com/dominicgaliano">GitHub</a><br>
             <a href="https://www.linkedin.com/in/dominic-galiano/">LinkedIn</a><br>
+            <a href="https://github.com/dominicgaliano/-current-resume/blob/main/dgaliano-resume.pdf">Resume</a><br>
         </p>
 
         <p class="quote">***<br><br>“If you choose not to decide, you still have made a choice.” — Neil Peart</p>
